# wtte-rnn

./: requirements.txt  setup.cfg  setup.py
docs/: conf.py
tests/: test_keras.py
wtternn/: wtte.py
