[metadata]
author = Librimind Ltd
author-email = victor@librimind.com
name = wtte-rnn
description = Weibull Time To Event Recurrent Neural Network
description-file = README.rst
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database


[files]
packages = wtte-rnn


[bdist_wheel]
universal = True
