[metadata]
author = Librimind Ltd
author-email = victor@librimind.com
name = wtternn
description = Weibull Time To Event Recurrent Neural Network
description-file = README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database

[files]
packages = wtternn

[bdist_wheel]
universal = True

[aliases]
test=pytest

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
max-line-length = 85
exclude = .git, .cache, .idea, __pycache__, venv, build, dist, docs

[tool:pytest]
norecursedirs = venv virtualenv .git
